# NewAGP

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: blank.yml
Test/: CMakeLists.txt  test_task.cpp
src/: main.cpp
